[package]
name = "db_connections"
version = "1.0.0"
edition = "2021"
authors = ["Kris Warner <kdwarn@protonmail.com>"]
repository = "https://github.com/dvrpc/db_connections"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
log = "0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"]}
serde-xml-rs = "0.6.0"
simplelog = "0.12"
time = { version = "0.3", features = ["macros"] }
